--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -41,3 +41,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+      - name: Print URL
+        run: echo "Deployed URL: ${{ steps.deployment.outputs.page_url }}"
