--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -41,5 +41,9 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        continue-on-error: true
+      - name: Handle deployment error
+        if: steps.Deploy-to-GitHub-Pages.outcome == 'failure'
+        run: echo "Deployment failed. Please check the logs for details."
       - name: Print URL
-        run: echo "new_page_url=${{ steps.deployment.outputs.page_url }}notebook/" >> $GITHUB_OUTPUT
+        run: echo steps.deployment.outputs.page_ur
